syntax = "proto3";

package kjkrol.helloworld;

option java_multiple_files = true;
option java_package = "kjkrol.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HW";

import "google/protobuf/empty.proto";


message HelloWorldResponse {
    string msg = 1;
}

service HelloWorldService {
    rpc HelloWorld (google.protobuf.Empty) returns (HelloWorldResponse);
}

